--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body{
 
   </head>
   <body>
-
+<div class="container">
     <!-- Image and text -->
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand">
@@ -143,4 +143,5 @@ body{
       <footer>
         1996 - 2019  Marriott International, Inc. All rights reserved. Marriott Proprietary Information
       </footer>
+ </div>     
     </html>
